--- a/src/about/index.html
+++ b/src/about/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/pure-min.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="static/css/customattendee.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="static/css/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../static/css/customattendee.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../static/css/main.css" />
   <title>About | MeetingShot</title>
 
   <meta property="og:title" content="Meeting Shot | Faux Meeting Screenshot Generator" />
@@ -22,9 +22,9 @@
   <section class="background">
     <nav>
       <div class="topnav">
-        <a href="index.html">Screenshot Generator</a>
-        <a class="active" href="about/index.html">About</a>
-        <a href="faq/index.html">FAQ</a>
+        <a href="../index.html">Screenshot Generator</a>
+        <a class="active" href="index.html">About</a>
+        <a href="../faq/index.html">FAQ</a>
       </div>
     </nav>
   </section>
