--- a/src/about/index.html
+++ b/src/about/index.html
@@ -28,6 +28,16 @@
       </div>
     </nav>
   </section>
+
+  <main>
+    <div class="light-color-block">
+      <h1>About MeetingShot</h1>
+      <div class="content-block">
+        <p>MeetingShot is a fun experimental project that allows you to generate faux Zoom meeting screenshots that place you in the company of celebrities and less popular characters without you having to actually know them.</p>
+        <p>It was created by <a href="//twitter.com/danielfe">Dan Fernandez</a> and <a href="//twitter.com/denniscode">Den Delimarsky</a> over a weekend after realizing that we never get to be a part of any meetings with president Barack Obama or Ruby on Rails creator David Heinemeier Hansson. So we decided to fake it until we make it.</p>
+      </div>
+    </div>
+  </main>
 </body>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
