Add more details in the FAQ

--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -65,6 +65,11 @@
       <div class="content-block">
         <p>No. We only used the Zoom format as a fun experiment. The project is <a href="https://github.com/thedanfernandez/meetingshot">open source</a> and you can try forking and modifying it to your needs.</p>
       </div>
+
+      <h2>Are my custom or webcam images uploaded anywhere?</h2>
+      <div class="content-block">
+        <p>No. Everything that you see is rendered directly in your browser. We do not store, analyze or send your images anywhere. We are using <a href="https://html2canvas.hertzen.com/">html2canvas</a> to generate the final image and that's also done directly in your browser and not on some remote server.</p>
+      </div>
     </div>
   </main>
 </body>
