--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,10 @@
 
                 <input class="pure-button pure-button-primary export-button" type="button" id="exportShot"
                     name="exportShot" value="Export Meeting Image" onclick="exportImage();" />
+
+                <input class="pure-button share-button" type="button" id="shareButton"
+                    name="shareButton" value="Share on Twitter" onclick="shareToTwitter();" />
+
                 <br />
             </div>
     </section>
