--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                 <div id="meetingGrid" class="grid grid-border grid-3row-3col"></div>
 
                 <div class="meeting-footer">
-                    <img src="static/images/meeting-footer.png"></img>
+                    <img alt="Static image of Zoom meeting controls" src="static/images/meeting-footer.png"></img>
                 </div>
                 <p id="counterLabel" class="attendee-counter-label">9</p>
             </div>
