AddThis social sharing

--- a/src/index.html
+++ b/src/index.html
@@ -103,9 +103,6 @@
                 <input class="pure-button pure-button-primary export-button" type="button" id="exportShot"
                     name="exportShot" value="Export Meeting Image" onclick="exportImage();" />
 
-                <input class="pure-button share-button" type="button" id="shareButton"
-                    name="shareButton" value="Share on Twitter" onclick="shareToTwitter();" />
-
                 <br />
             </div>
     </section>
@@ -161,4 +158,5 @@
 <script type="text/javascript" src="static/js/customattendee.js"></script>
 <script async type="text/javascript" src="static/js/core.js"></script>
 <script src="static/js/html2canvas.min.js"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e866ab6c11fc1ef"></script>
 </html>
