--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -193,5 +193,9 @@
         </div>
       </div>
     </main>
+    <script
+      type="text/javascript"
+      src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e866ab6c11fc1ef"
+    ></script>
   </body>
 </html>
