--- a/src/about/index.html
+++ b/src/about/index.html
@@ -20,26 +20,18 @@
         gtag("config", "UA-163469469-2");
       }
     </script>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About | MeetingShot</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@2.0.1/build/pure-min.css"
     />
     <link
       rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="../static/css/customattendee.css"
+      href="https://unpkg.com/purecss@2.0.1/build/grids-responsive-min.css"
     />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="../static/css/main.css"
-    />
-    <title>About | MeetingShot</title>
-
+    <link rel="stylesheet" href="styles.css" />
     <meta
       property="og:title"
       content="Meeting Shot | Faux Meeting Screenshot Generator"
@@ -135,37 +127,112 @@
   </head>
 
   <body>
-    <section class="background">
-      <nav>
-        <div class="topnav">
-          <a href="../index.html">Screenshot Generator</a>
-          <a class="active" href="index.html">About</a>
-          <a href="../faq/index.html">FAQ</a>
-        </div>
-      </nav>
-    </section>
+    <div class="header">
+      <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+        <a class="pure-menu-heading" href="/">MeetingShot</a>
+        <ul class="pure-menu-list">
+          <li class="pure-menu-item pure-menu-selected">
+            <a href="/about" class="pure-menu-link">About</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="/faq" class="pure-menu-link">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-    <main>
-      <div class="light-color-block">
-        <h1>About MeetingShot</h1>
-        <div class="content-block">
+    <div class="splash-container">
+      <div class="splash">
+        <h1>MeetingShot</h1>
+        <p class="splash-subhead">
+          MeetingShot is a Faux Screenshot Generator designed to help those
+          suffering from FOMMO - Fear of Missing Meetings Online. <br />
+        </p>
+
+        <p>
+          <a href="/" class="pure-button pure-button-primary">
+            Create a Meeting
+          </a>
+        </p>
+        <p class="splash-subhead">
+          <br />Created by
+          <a class="white-link" href="//twitter.com/danielfe">Dan Fernandez</a>
+          and
+          <a class="white-link" href="//twitter.com/denniscode"
+            >Den Delimarsky</a
+          >
+        </p>
+      </div>
+    </div>
+
+    <div class="content-wrapper">
+      <!-- Row 1 -->
+      <div class="ribbon l-box-lrg pure-g">
+        <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
+          <img
+            width="300"
+            alt="Change this"
+            class="pure-img-responsive"
+            src="../static/images/attendee-llama.png"
+          />
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+          <h2 class="content-head content-head-ribbon">
+            Get started easily
+          </h2>
           <p>
-            MeetingShot is a fun experimental project that allows you to
-            generate faux Zoom meeting screenshots that place you in the company
-            of celebrities and less popular characters without you having to
-            actually know them.
-          </p>
-          <p>
-            It was created by
-            <a href="//twitter.com/danielfe">Dan Fernandez</a> and
-            <a href="//twitter.com/denniscode">Den Delimarsky</a> over a weekend
-            after realizing that we never get to be a part of any meetings with
-            president Barack Obama or Ruby on Rails creator David Heinemeier
-            Hansson. So we decided to fake it until we make it.
+            Select your meeting size between 1 and 9 attendees and click on each
+            attendee to customize their image.
           </p>
         </div>
       </div>
-    </main>
+      <!-- Row 2 -->
+      <div class="ribbon l-box-lrg pure-g">
+        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+          <h2 class="content-head content-head-ribbon">
+            Custom image and webcam support
+          </h2>
+          <p>
+            You can upload custom images (no data is kept on the server) or use
+            capture a realtime camera view of your webcam.
+          </p>
+        </div>
+        <!-- Row 3 -->
+        <div class="l-box-lrg pure-u-1 is-center pure-u-md-1-2 pure-u-lg-2-5">
+          <img
+            width="300"
+            alt="Change this"
+            class="pure-img-responsive"
+            src="../static/images/attendee-llama.png"
+          />
+        </div>
+      </div>
+      <div class="ribbon l-box-lrg pure-g">
+        <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
+          <img
+            width="300"
+            alt="Change this"
+            class="pure-img-responsive"
+            src="../static/images/attendee-llama.png"
+          />
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+          <h2 class="content-head content-head-ribbon">Have Fun</h2>
+          <p>
+            Unleash your creativity adding your favorite celebrities and
+            characters or by creating themed meetings like the "Brady Bunch",
+            "The Karens", or the "Worst.Meeting.Ever".
+          </p>
+        </div>
+      </div>
+
+      <div class="content is-center">
+        <a href="/" class="pure-button pure-button-primary">
+          Create a Meeting Now!
+        </a>
+        <p></p>
+      </div>
+    </div>
     <script
       type="text/javascript"
       src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e866ab6c11fc1ef"
