Updated font size and image width

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -129,13 +129,13 @@
   <body>
     <div class="header">
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href="/">MeetingShot</a>
+        <a class="pure-menu-heading" href="../">MeetingShot</a>
         <ul class="pure-menu-list">
           <li class="pure-menu-item pure-menu-selected">
-            <a href="/about" class="pure-menu-link">About</a>
+            <a href="#" class="pure-menu-link">About</a>
           </li>
           <li class="pure-menu-item">
-            <a href="/faq" class="pure-menu-link">FAQ</a>
+            <a href="../faq" class="pure-menu-link">FAQ</a>
           </li>
         </ul>
       </div>
@@ -170,7 +170,7 @@
       <div class="ribbon l-box-lrg pure-g">
         <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
           <img
-            width="300"
+            width="500"
             alt="Change this"
             class="pure-img-responsive"
             src="../static/images/attendee-llama.png"
@@ -200,7 +200,7 @@
         <!-- Row 3 -->
         <div class="l-box-lrg pure-u-1 is-center pure-u-md-1-2 pure-u-lg-2-5">
           <img
-            width="300"
+            width="500"
             alt="Change this"
             class="pure-img-responsive"
             src="../static/images/attendee-llama.png"
@@ -210,7 +210,7 @@
       <div class="ribbon l-box-lrg pure-g">
         <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
           <img
-            width="300"
+            width="500"
             alt="Change this"
             class="pure-img-responsive"
             src="../static/images/attendee-llama.png"
