Updated links to point to folder verus filename

--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -138,9 +138,9 @@
     <section class="background">
       <nav>
         <div class="topnav">
-          <a href="../index.html">Screenshot Generator</a>
-          <a href="../about/index.html">About</a>
-          <a class="active" href="index.html">FAQ</a>
+          <a href="../">MeetingShot</a>
+          <a href="../about/">About</a>
+          <a class="active" href="#">FAQ</a>
         </div>
       </nav>
     </section>
