--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,9 @@
     <section class="background">
         <nav>
             <div class="topnav">
-                <a class="active" href="index.html">Screenshot Generator</a>
-                <a href="about/index.html">About</a>
-                <a href="faq/index.html">FAQ</a>
+                <a class="active" href="/">MeetingShot</a>
+                <a href="about/">About</a>
+                <a href="faq/">FAQ</a>
             </div>
         </nav>
         <div class="light-color-block">
