--- a/src/about/index.html
+++ b/src/about/index.html
@@ -173,7 +173,7 @@
             width="500"
             alt="Change this"
             class="pure-img-responsive"
-            src="../static/images/attendee-llama.png"
+            src="../static/images/meetingshot.jpg"
           />
         </div>
         <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
