--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/pure-min.css" />
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/grids-responsive-min.css" />
   <link rel="stylesheet" href="static/css/landing.css" />
+  <link rel="stylesheet" href="static/css/header.css" />
   <meta property="og:title" content="Meeting Shot | Faux Meeting Screenshot Generator" />
   <meta property="og:description"
     content="MeetingShot allows you to generate custom screenshots of Zoom meetings with notable attendees." />
