--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
       <a class="pure-menu-heading" href="../">MeetingShot</a>
       <ul class="pure-menu-list">
         <li class="pure-menu-item pure-menu-selected">
-          <a href="#" class="pure-menu-link">About</a>
+          <a href="about/" class="pure-menu-link">About</a>
         </li>
         <li class="pure-menu-item">
           <a href="../faq" class="pure-menu-link">FAQ</a>
