--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,10 @@
       <a class="pure-menu-heading" href="../">MeetingShot</a>
       <ul class="pure-menu-list">
         <li class="pure-menu-item pure-menu-selected">
-          <a href="about/" class="pure-menu-link">About</a>
+          <a href="create/" class="pure-menu-link">Create Meeting</a>
         </li>
         <li class="pure-menu-item">
-          <a href="../faq" class="pure-menu-link">FAQ</a>
+          <a href="faq/" class="pure-menu-link">FAQ</a>
         </li>
       </ul>
     </div>
