--- a/src/create/index.html
+++ b/src/create/index.html
@@ -56,11 +56,11 @@
             <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
                 <a class="pure-menu-heading" href="../">MeetingShot</a>
                 <ul class="pure-menu-list">
-                    <li class="pure-menu-item pure-menu-selected">
-                        <a href="#" class="pure-menu-link">About</a>
+                    <li class="pure-menu-item">
+                        <a href="../create/" class="pure-menu-link">Create Meeting</a>
                     </li>
                     <li class="pure-menu-item">
-                        <a href="../faq" class="pure-menu-link">FAQ</a>
+                        <a href="../faq/" class="pure-menu-link">FAQ</a>
                     </li>
                 </ul>
             </div>
