--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -57,17 +57,17 @@
   <section class="background">
     <div class="header">
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-          <a class="pure-menu-heading" href="../">MeetingShot</a>
-          <ul class="pure-menu-list">
-              <li class="pure-menu-item pure-menu-selected">
-                  <a href="#" class="pure-menu-link">About</a>
-              </li>
-              <li class="pure-menu-item">
-                  <a href="../faq" class="pure-menu-link">FAQ</a>
-              </li>
-          </ul>
+        <a class="pure-menu-heading" href="../">MeetingShot</a>
+        <ul class="pure-menu-list">
+          <li class="pure-menu-item">
+            <a href="../create/" class="pure-menu-link">Create Meeting</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="../faq/" class="pure-menu-link">FAQ</a>
+          </li>
+        </ul>
       </div>
-  </div>
+    </div>
   </section>
 
   <main>
