--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
       <a class="pure-menu-heading" href="../">MeetingShot</a>
       <ul class="pure-menu-list">
-        <li class="pure-menu-item pure-menu-selected">
+        <li class="pure-menu-item">
           <a href="create/" class="pure-menu-link">Create Meeting</a>
         </li>
         <li class="pure-menu-item">
