--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | MeetingShot</title>
+  <title>MeetingShot - Faux Meeting Screenshot Generator</title>
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/pure-min.css" />
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/grids-responsive-min.css" />
   <link rel="stylesheet" href="static/css/landing.css" />
@@ -71,7 +71,7 @@
     <div class="splash">
       <h1>MeetingShot</h1>
       <p class="splash-subhead">
-        MeetingShot is a Faux Screenshot Generator designed to help those
+        MeetingShot is a faux meeting screenshot generator designed to help those
         suffering from FOMMO - Fear of Missing Meetings Online. <br />
       </p>
 
@@ -93,15 +93,15 @@
     <!-- Row 1 -->
     <div class="ribbon l-box-lrg pure-g">
       <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-        <img width="500" alt="Change this" class="pure-img-responsive" src="static/images/meetingshot.jpg" />
+        <img width="500" alt="Change this" class="pure-img-responsive" src="static/images/meetingshot.png" />
       </div>
       <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
         <h2 class="content-head content-head-ribbon">
           Get started easily
         </h2>
         <p>
-          Select your meeting size between 1 and 9 attendees and click on each
-          attendee to customize their image.
+          Meet with anyone, from one attendee (just yourself), to a group of nine (wow, you must be popular) - in seconds. Zero cost, no encryption, and no support
+          for interactive chat. This is going to be the most fun and most productive meeting you've ever had in your life!
         </p>
       </div>
     </div>
@@ -118,7 +118,7 @@
       </div>
       <!-- Row 3 -->
       <div class="l-box-lrg pure-u-1 is-center pure-u-md-1-2 pure-u-lg-2-5">
-        <img width="500" alt="Change this" class="pure-img-responsive" src="static/images/attendee-llama.png" />
+        <img width="500" alt="Change this" class="pure-img-responsive" src="static/images/custom-attendees.png" />
       </div>
     </div>
     <div class="ribbon l-box-lrg pure-g">
