--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,9 @@
           Custom image and webcam support
         </h2>
         <p>
-          You can upload custom images (no data is kept on the server) or use
-          capture a realtime camera view of your webcam.
+          Don't have any celebrity friends? Don't worry - we don't either. But you can pretend that you are in a meeting with whoever you want. And if you don't find
+          the attendee you want in our (limited) library, you can always upload a custom image or use your own webcam to include the one true celebrity
+          in the meeting.
         </p>
       </div>
       <!-- Row 3 -->
@@ -123,20 +124,20 @@
     </div>
     <div class="ribbon l-box-lrg pure-g">
       <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-        <img width="500" alt="Change this" class="pure-img-responsive" src="static/images/attendee-llama.png" />
+        <img width="500" alt="Change this" class="pure-img-responsive" src="static/images/image-download.png" />
       </div>
       <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
         <h2 class="content-head content-head-ribbon">Have Fun</h2>
         <p>
           Unleash your creativity adding your favorite celebrities and
-          characters or by creating themed meetings like the "Brady Bunch",
-          "The Karens", or the "Worst.Meeting.Ever".
+          characters or by creating themed meetings like "The Brady Bunch",
+          "SNL", or the "Worst. Meeting. Ever." We'll leave it up to you to create your own combinations.
         </p>
       </div>
     </div>
 
     <div class="content is-center">
-      <a href="create/index.html" class="pure-button pure-button-primary">
+      <a href="create/index.html" class="pure-button pure-button-primary-bottom">
         Create a Meeting Now!
       </a>
       <p></p>
