Add link to GitHub

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,9 @@
         <li class="pure-menu-item">
           <a href="faq/" class="pure-menu-link">FAQ</a>
         </li>
+        <li class="pure-menu-item">
+          <a href="https://github.com/thedanfernandez/meetingshot" class="pure-menu-link">GitHub</a>
+        </li>
       </ul>
     </div>
   </div>
