--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,8 @@
         <h1>MeetingShot</h1>
         <p class="splash-subhead">
           MeetingShot is a faux meeting screenshot generator designed to help
-          those suffering from FOMMO - Fear of Missing Meetings Online. <br />
+          those suffering from <b>FOMMO - Fear of Missing Meetings Online</b>.
+          <br />
         </p>
 
         <p>
